added hint for hostname in settings view

--- a/settings/index.html
+++ b/settings/index.html
@@ -13,6 +13,7 @@
       <label class="homey-form-label" for="hostname" data-i18n="settings.hostname">IP / Hostname Ducobox</label>
       <input class="homey-form-input" id="hostname" type="text" value="" />
     </div>
+    <p data-i18n="settings.hostname_hint"></p>
 
     <button id="save" class="homey-button-primary-full" data-i18n="settings.save">Save changes</button>
 
